fixed error modal z-index and fading buying bundle modal

--- a/accountiboard/accounti/static/css/style.css
+++ b/accountiboard/accounti/static/css/style.css
@@ -2489,3 +2489,7 @@ aside.leftAside {
     font-size: 1.2em;
     font-weight: 400;
 }
+
+#mainErrorModal {
+    z-index: 1090;
+}
